# CPProject

./: CMakeCache.txt  CMakeLists.txt  CPProject.cbp  CPProject.out  Makefile  cmake_install.cmake  kdkey.txt  python_magic.py  test.html
Google_tests/: CMakeLists.txt  Makefile  cmake_install.cmake  view_tests.cpp
Sources/: PythonMagic.h  main.cpp
Sources/Base/: BaseComporator.cpp  BaseComporator.h  BaseDataStructure.h  BaseSearchEngine.cpp  BaseSearchEngine.h
Sources/DataBase/KD/: SearchEngine.cpp  SearchEngine.h
Sources/KD/: Container.cpp  Container.h  DB.cpp  DB.h  DBManager.cpp  DBManager.h  KDTree.cpp  KDTree.h  SearchEngine.cpp  SearchEngine.h
Sources/Page/: Page.cpp
Sources/PageData/: PageData.cpp  PageData.h
Sources/PageGenerator/: PageGenerator.cpp  PageGenerator.h
Sources/PageManager/: PageManager.cpp  PageManager.h
Sources/Server/: Server.h
Sources/StaticGeneration/Google_tests/: CMakeLists.txt  Google_Tests_run  Google_tests.cbp  Makefile  PersonViewTest.cpp  SecondaryView_tests.cpp  TestSampleViews.cpp  cmake_install.cmake  view_tests.cpp
Sources/StaticGeneration/Google_tests/googletest/: googletest-distribution.cbp
Sources/StaticGeneration/Google_tests/googletest/googlemock/: gmock.cbp
Sources/StaticGeneration/Google_tests/googletest/googletest/: gtest.cbp
Sources/StaticGeneration/Page/: Page.cpp
Sources/StaticGeneration/PageGenerator/: PageGenerator.cpp  PageGenerator.h
Sources/StaticGeneration/PageManager/: PageManager.h
Sources/StaticGeneration/Views/PersonView/: PersonView.cpp  PersonView.h
Sources/StaticGeneration/Views/Samples/: SampleViews.h
Sources/StaticGeneration/Views/SecondaryView/: SecondaryView.cpp
Sources/Views/Cell/: CellView.cpp  CellView.h
Sources/Views/Form/: FormView.cpp  FormView.h
Sources/Views/ImageView/: ImageView.cpp  ImageView.h
Sources/Views/PersonView/: PersonView.cpp  PersonView.h
Sources/Views/Row/: RowView.cpp  RowView.h
Sources/Views/Samples/: SampleViews.h
Sources/Views/SecondaryView/: SecondaryView.cpp  SecondaryView.h
Sources/Views/TableView/: TableView.cpp  TableView.h
Sources/Views/TextView/: TextView.cpp  TextView.h
Sources/Views/UserData/: UserData.cpp  UserData.h
Sources/Views/View/: View.cpp
Sources/WebCrowler/: main.cpp
Sources/WebCrowler/Crowler/: Crowler.cpp  Crowler.h
Sources/WebCrowler/NetService/: NetService.cpp
Sources/WebServer/HttpRequest/: HttpRequest.cpp  HttpRequest.h
Sources/WebServer/HttpResponse/: HttpResponse.cpp
Sources/WebServer/Server/: Server.cpp  Server.h
Static/: startpage.html  test — копия 2.html  test — копия 3.html  usersPage.html
